manifests/commitment-tracker/react-commitment-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commitment-tracker-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commitment-tracker-frontend
  template:
    metadata:
      labels:
        app: commitment-tracker-frontend
    spec:
      containers:
        - name: commitment-tracker-frontend
          image: 192.168.56.20:5001/commitment-tracker-frontend:cbcc4dc
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: commitment-tracker-frontend
  namespace: default
spec:
  selector:
    app: commitment-tracker-frontend
  ports:
    - port: 3000
      targetPort: 3000
