manifests/commitment-tracker/spring-commitment-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commitment-tracker-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commitment-tracker-api
  template:
    metadata:
      labels:
        app: commitment-tracker-api
    spec:
      containers:
        - name: commitment-tracker-api
          image: 192.168.56.20:5001/commitment-tracker-api:da33ea5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: commitment-tracker-api
  namespace: default
spec:
  selector:
    app: commitment-tracker-api
  ports:
    - port: 8080
      targetPort: 8080
